--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "link": "^0.1.5",
+    "lottie-react-native": "^3.5.0",
     "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -29,8 +30,7 @@
     "react-native-screens": "~3.0.0",
     "react-native-tab-view": "^2.16.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12",
-    "lottie-react-native": "3.5.0"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
