--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-snackbar": "^2.4.0",
+    "react-native-snackbar-component": "^1.1.11",
     "react-native-tab-view": "^2.16.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12"
