--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-appearance": "~0.3.3",
     "react-native-elements": "^3.4.0",
+    "react-native-formik": "^1.7.8",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "~2.1.0",
