--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "~41.0.0",
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
+    "formik": "^2.2.6",
     "link": "^0.1.5",
     "lottie-react-native": "^3.5.0",
     "native-base": "^2.15.2",
