--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-appearance": "~0.3.3",
+    "react-native-camera": "^3.43.6",
     "react-native-elements": "^3.4.0",
     "react-native-formik": "^1.7.8",
     "react-native-gesture-handler": "~1.10.2",
