--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
     "expo": "~41.0.0",
+    "expo-camera": "~11.0.2",
     "expo-font": "~9.1.0",
+    "expo-permissions": "~12.0.1",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.6",
     "link": "^0.1.5",
@@ -45,7 +47,8 @@
     "react-native-snackbar-component": "^1.1.11",
     "react-native-tab-view": "^2.16.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "unimodules-permissions-interface": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
